Refactor for cleaner equality checks and simplify empty collection handling using utility methods.